--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port = 9090
-spring.datasource.url=jdbc:postgresql://localhost:5432/blacklistservice
-spring.datasource.username=postgres
-spring.datasource.password=Jabulani009$
+spring.datasource.url=${env.DATABASE_URL}
+spring.datasource.username=${env.DB_USERNAME}
+spring.datasource.password=${env.DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #FOR JWT SERVICE
-myapp.secretKey=Jabulani009$
+myapp.secretKey=${env.SECRET_JWT_KEY}
 myapp.totalTime=36000000
 
 
