--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${env.DATABASE_URL}
 spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -20,4 +20,4 @@ spring.jpa.defer-datasource-initialization=true
 
 management.endpoint.health.group.custom.show-components=always
 management.endpoint.health.group.custom.show-details=always
-management.endpoints.web.exposure.include=refresh,health-
+management.endpoints.web.exposure.include=refresh,health- 
