refactoring blacklist service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,23 @@ spring.jpa.defer-datasource-initialization=true
 
 
 
+
+#Api Info
+app.info.title=MANAGING BLACK LIST SERVICE
+app.info.description=BLACKLISTING
+app.info.version=1.0.0
+app.info.contact-name=chuks
+app.info.contact-url=www.manager.com
+app.info.contact-email=info@BlackList.com
+
+
+
+#Swagger
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.swagger-ui.operationsSorter=method
+springdoc.show-actuator=true
+
+
 management.endpoint.health.group.custom.show-components=always
 management.endpoint.health.group.custom.show-details=always
 management.endpoints.web.exposure.include=refresh,health- 
